--- a/.github/workflows/generate-spritesheet.yml
+++ b/.github/workflows/generate-spritesheet.yml
@@ -31,4 +31,4 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
           destination_dir: 'logos/'
-          source_dir: '/home/runner/work/spritesheet-generator/spritesheet-generator/spritesheet.png'
+          source_dir: 'logos'
