--- a/.github/workflows/generate-spritesheet.yml
+++ b/.github/workflows/generate-spritesheet.yml
@@ -3,7 +3,7 @@ name: Generate and Upload Image to S3
 on:
   push:
     branches:
-      - main  # Runs on pushes to the main branch, modify as needed
+      - main
 
 jobs:
   generate_and_upload_image:
